--- a/media/css/djangopackages.css
+++ b/media/css/djangopackages.css
@@ -31,10 +31,20 @@ h2 { font-size: 153.9%; }
 #tabhead .login a, #tabhead .login a:visited { color: #333; }
 #tabhead .login a:hover { color: #DEF; }
 
+#tabhead .searchform { float:right; padding:10px 10px 0 10px;}
+
 #footer { margin-top:20px; clear:both; width: 100%; text-align: center; font-size:80%; }
 
 
+/* Search box */
+#id_q_p { width:380px; height:22px; border:1px solid #999999; margin:0; padding:0; vertical-align:top;}
+input#magnifier-submit { background: url('../img/search.png') #87deaa no-repeat center; border:0; height:24px; width:36px; margin:0 0 6px -5px; padding:0; vertical-align:top;}
+.home-searchcheckbox { margin: 0 2px 0 10px; }
 
+/* autocomplete */
+.ui-autocomplete { background: #fff; text-align: left; border: 1px solid #bfbfbf; }
+.ui-state-hover { background: #eee; }
+.ui-menu-item a { display: block; padding: 3px 10px; }
 
 /* Nav bar - overrides styles from tabs.css */
 #nav-help { margin: 10px 0 0 20px; } /* the top left help btn */
