--- a/media/css/home.css
+++ b/media/css/home.css
@@ -14,6 +14,25 @@ input#magnifier-submit { background: url('../img/search.png') #87deaa no-repeat 
 .home-searchcheckbox { margin: 0 2px 0 10px; }
 
 #home-packages img { vertical-align: middle; }
+#home-packages .repo-watchers a {
+  background-image: url(../img/eye_20x20_clear.png);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
+  display: block;
+  text-indent: -9999px;
+  overflow: hidden;
+}
+
+#home-packages .repo-forks a {
+  background-image: url(../img/fork_20x20_clear.png);
+  background-repeat: no-repeat;
+  width: 20px;
+  height: 20px;
+  display: block;
+  text-indent: -9999px;
+  overflow: hidden;
+}
 
 .home-table th, .home-table td {border:0;}
 .home-usage-button-cell { margin:0; padding:0;}
