Moved package '_' templates to the includes folder
The '_' files are partial templates, and don't operate
on their own, so we moved them into the includes folder.

--- a/templates/package/ajax_package_list.html
+++ b/templates/package/ajax_package_list.html
@@ -4,7 +4,7 @@
         <p class="editable-cell">Click a package to add it to the grid.</p>      
     {% endif %}
     {% for package in packages %}
-        {% include "package/_package.html" %}
+        {% include "package/includes/_package.html" %}
     {% endfor %}
     <script type="text/javascript">
        
