--- a/templates/package/package_archive.html
+++ b/templates/package/package_archive.html
@@ -12,7 +12,7 @@
 
     <div id="packages">
         {% for package in latest %}
-            {% include "package/_package.html"%}
+            {% include "package/includes/_package.html"%}
         {% endfor %}
     </div>
 
