--- a/templates/package/package_form.html
+++ b/templates/package/package_form.html
@@ -30,7 +30,7 @@
 <script src="{{ STATIC_URL }}js/urlify.js" type="text/javascript"></script>
 <script type="text/javascript">
     $(function() {
-        {% include "package/_package_form.js" %}
+        {% include "package/includes/_package_form.js" %}
     });
 </script>
 
