Moved trouble ticket partial template to includes

--- a/templates/account/password_reset.html
+++ b/templates/account/password_reset.html
@@ -25,7 +25,7 @@
         </fieldset>
     </form>
     
-    {% include "account/_trouble_ticket.html" %}
+    {% include "account/includes/_trouble_ticket.html" %}
 {% endblock %}
 
 {% block extra_body %}
