--- a/templates/grid/grid_detail.html
+++ b/templates/grid/grid_detail.html
@@ -26,7 +26,7 @@
     
     {% if features %}
         <h2>Features currently being evaluated</h2>
-        <table id="grid" border="3">      
+        <table id="feature-list" border="3">      
             <thead>
                 <tr>
                     <th>Feature</th>
@@ -59,7 +59,7 @@
         {% endif %}        
     {% endif %}
 
-    <p></p>
+    <p id="grid-toggle">&nbsp;</p>
     
     {% if grid_packages.count %}
     
@@ -84,8 +84,6 @@
                                     {{ short|wordwrap:30|linebreaksbr }}
                                 {% endif %}
                             {% endwith %}
-                            
-                            
                         </td>
                     {% endfor %}
                 </tr>                    
@@ -106,7 +104,7 @@
                             {% endwith %}        
                         </td>
                     {% endfor %}
-                </td>
+                </tr>
                 <tr class="even">
                     <td>Downloads</td>
                     {% for grid_package in grid_packages %}
@@ -171,7 +169,6 @@
                         </td>
                     {% endfor %}
                 </tr>
-                {% include "grid/snippets/grid_row_header.html" %}                
                 {% for feature in features %}
                     <tr class="{% cycle 'even' 'odd' %}">
                         <td>{{ feature.title }}</td>
@@ -182,12 +179,10 @@
                         {% endfor %}
                     </tr>
                 {% endfor %}
-                {% if features %}
-                    {% include "grid/snippets/grid_row_header.html" %}                
-                {% endif %}
-        
             </tbody>
-    
+            <tfoot>
+                {% include "grid/snippets/grid_row_header.html" %}
+            </tfoot>
         </table>
         {% if request.user.is_authenticated %}
             <p><img src="{{ STATIC_URL }}img/icon_changelink.gif"/>&nbsp;Highlighted cells are editable.  Click highlighted cells to change text.</p>
@@ -203,8 +198,64 @@
 {% block extra_body %}
         <script type="text/javascript">
 
+            function getParameterByName(name) {
+                // short and sweet reading of query-string parameters
+                // SEE http://stackoverflow.com/questions/901115/get-querystring-values-with-jquery/5158301#5158301
+                var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+                return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+            }
+
             $(function() {  
                 
+                // allow user override of fancy JS-grid by adding "?simpleGrid=true" to URL
+                var usingSimpleGrid = getParameterByName('simpleGrid') == 'true';
+                var toggleURL = window.location.href;
+                if (usingSimpleGrid) {
+                    toggleURL = toggleURL.replace('?simpleGrid=true','');
+                    $('#grid-toggle').html('<a href="'+ toggleURL +'">Switch to smart grid</a>');
+                } else {
+                    if (window.location.search.indexOf('simpleGrid=true') === -1) {
+                        if (window.location.search === "") {
+                            toggleURL = toggleURL + '?simpleGrid=true';
+                        } else {
+                            toggleURL = toggleURL.replace('?', '?simpleGrid=true&');
+                        }
+                    }
+                    $('#grid-toggle').html('<a href="'+ toggleURL +'">Switch to simple table</a>');
+
+                    // capture "natural" widths of all table headers
+                    var $headers = $('#grid thead th');
+                    var howManyColumns = $headers.length;
+                    var $topmostCells = $('#grid tbody tr:first-child td');
+
+                    $topmostCells.each(function(index, element) {
+                        ///var matchingWidth = $headers.eq(index).width();
+                        var matchingWidth = $headers.eq(index).css('width'); // || $headers.eq(index).width();
+                        $(this).css('width', matchingWidth);
+                    });
+
+                    // apply dataTable plugin to package grid (will split tables)
+                    $('#grid').dataTable({
+                        // "bScrollInfinite": true,
+                        "bSort": false, // disable default sorting
+                        "bAutoWidth": true,
+                        "sScrollY": "600px",
+                        "sScrollX": "100%",
+                        //"sScrollXInner": "110%",
+                        "bScrollCollapse": true
+                    });
+                    // now freeze these widths in all tables! 
+                    // SEE http://www.quirksmode.org/css/tables.html
+                    $('.dataTables_wrapper table').css('table-layout', 'fixed');
+
+                    // style first cell (package name) in each scrolling row
+                    $('#grid td:first-child').css({
+                        'font-weight': 'bold', 
+                        'color': '#000000;', 
+                        'background-color': '#E0FBE9'
+                    });
+                }
+
                 {% if request.user.is_authenticated %}
                     // Handle element edit redirects
                     {% for feature in features %}
